# bropt

./: .gitattributes  Cargo.toml  README.md  bropt.py  pyproject.toml  rustfmt.toml
result/: compare.gnuplot  data.txt
src/: brainfuck.rs  lib.rs  main.rs
