[package]
name = "bropt"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
pyo3 = { version = "0.25.1", features = ["extension-module"] }

[profile.dev]
overflow-checks = false

[profile.release]
overflow-checks = false
